Cycles - Motion blur seems to be additive when rendering animations #55626

Closed
opened 2018-06-26 06:54:01 +02:00 by Carlo Andreacchio · 12 comments

System Information
Windows 7 x64, Ubuntu 17.04

Blender Version
Broken: d53093953f

Short description of error
Motion blur seems to be additive when rendering animations, rather than only taking the movement for that frame

Exact steps for others to reproduce the error

  1. Open attached blend file
  2. Render to directory
  3. Notice how frames 4 and 5 have motion blur on it, when it shouldnt have any motion blur
    motionblurBug.blend
**System Information** Windows 7 x64, Ubuntu 17.04 **Blender Version** Broken: d53093953f8 **Short description of error** Motion blur seems to be additive when rendering animations, rather than only taking the movement for that frame **Exact steps for others to reproduce the error** 1. Open attached blend file 2. Render to directory 3. Notice how frames 4 and 5 have motion blur on it, when it shouldnt have any motion blur [motionblurBug.blend](https://archive.blender.org/developer/F3802977/motionblurBug.blend)

Added subscriber: @candreacchio

Added subscriber: @candreacchio

This is visible both on CUDA and CPU based renders aswell

This is visible both on CUDA and CPU based renders aswell

I have bisected the issue to commit 78c2063685

I have bisected the issue to commit 78c2063685

Seems like this is a duplicate of #55106

Seems like this is a duplicate of #55106

It only has the bug when the position is 'Center on Frame', the other two options avoid this bug.

It only has the bug when the position is 'Center on Frame', the other two options avoid this bug.

using a value higher than 1 when the position isnt Center on Frame, reproduces this bug aswell

using a value higher than 1 when the position isnt Center on Frame, reproduces this bug aswell

I can confirm this is happening both on master and blender2.8

Can I please get a developer response? This is quite a major bug for animation purposes.

I can confirm this is happening both on master and blender2.8 Can I please get a developer response? This is quite a major bug for animation purposes.

Added subscriber: @ShyGuyMath

Added subscriber: @ShyGuyMath

I have a solution that fixes this but I am still trying to see why it works, but the problem seems to stem from a change in blender_camera.cpp in BlenderSync::sync_camera_motion

I have a solution that fixes this but I am still trying to see why it works, but the problem seems to stem from a change in blender_camera.cpp in BlenderSync::sync_camera_motion
Brecht Van Lommel was assigned by Philipp Oeser 2018-06-29 13:48:04 +02:00

This issue was referenced by blender/cycles@64d721f023

This issue was referenced by blender/cycles@64d721f023e35a8b000aaa68cd26005fdd88e029

This issue was referenced by 9c5203c98f

This issue was referenced by 9c5203c98faac4ea66f5c17a9642b7142033aebe

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55626
No description provided.