Fix T55626, fix T55106: Cycles motion blur + persistent images bug.